# docs/swagger.json
@@ -17,22 +17,30 @@
     "host": "ws-agung-2024-b77249100221.herokuapp.com",
     "basePath": "/",
     "paths": {
-        "/presensi": {
-            "get": {
-                "description": "Mengambil semua data presensi.\nAmbil per ID data presensi.",
+        "/ins": {
+            "post": {
+                "description": "Input data presensi.",
                 "consumes": [
-                    "application/json",
                     "application/json"
                 ],
                 "produces": [
-                    "application/json",
                     "application/json"
                 ],
                 "tags": [
-                    "Presensi",
                     "Presensi"
                 ],
-                "summary": "Get By ID Data Presensi.",
+                "summary": "Insert data presensi.",
+                "parameters": [
+                    {
+                        "description": "Payload Body [RAW]",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controller.Presensi"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -43,28 +51,45 @@
                     "400": {
                         "description": "Bad Request"
                     },
-                    "404": {
-                        "description": "Not Found"
-                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
                 }
             }
         },
-        "/presensi/{id}": {
+        "/presensi": {
             "get": {
-                "description": "Mengambil semua data presensi.\nAmbil per ID data presensi.",
+                "description": "Mengambil semua data presensi.",
                 "consumes": [
-                    "application/json",
                     "application/json"
                 ],
                 "produces": [
-                    "application/json",
                     "application/json"
                 ],
                 "tags": [
-                    "Presensi",
+                    "Presensi"
+                ],
+                "summary": "Get All Data Presensi.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Presensi"
+                        }
+                    }
+                }
+            }
+        },
+        "/presensi/{id}": {
+            "get": {
+                "description": "Ambil per ID data presensi.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
                     "Presensi"
                 ],
                 "summary": "Get By ID Data Presensi.",
